{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 23,
  "lineage": "f88153ac-ffa1-5d0c-f9da-ef8ee7e0def8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "priv-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:533267185770:instance/i-07441f7246e2b5b43",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07441f7246e2b5b43",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "clintontest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05b616e0c2d1bee8c",
            "private_dns": "ip-20-0-2-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.2.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06edfdc057e1ff3ce",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-05e05ff8739eb22c3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f29d809b98aaf176",
            "tags": {
              "Name": "priv_server"
            },
            "tags_all": {
              "Name": "priv_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e05ff8739eb22c3"
            ]
          },
          "dependencies": [
            "aws_security_group.kiensg",
            "aws_subnet.priv-sub",
            "aws_vpc.kienvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:533267185770:instance/i-06b2214ef2ac43309",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b2214ef2ac43309",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "clintontest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0df3dea148b5e820b",
            "private_dns": "ip-20-0-0-144.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.0.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0918600c85b57c44e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-05e05ff8739eb22c3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0306567af701abb22",
            "tags": {
              "Name": "pub_server"
            },
            "tags_all": {
              "Name": "pub_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e05ff8739eb22c3"
            ]
          },
          "dependencies": [
            "aws_security_group.kiensg",
            "aws_subnet.pub-sub",
            "aws_vpc.kienvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kienigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267185770:internet-gateway/igw-011e41fc38b0a12af",
            "id": "igw-011e41fc38b0a12af",
            "owner_id": "533267185770",
            "tags": {
              "Name": "kienigw"
            },
            "tags_all": {
              "Name": "kienigw"
            },
            "vpc_id": "vpc-0e2fdeb977db42672"
          },
          "dependencies": [
            "aws_vpc.kienvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267185770:route-table/rtb-0c16a025c8925480d",
            "id": "rtb-0c16a025c8925480d",
            "owner_id": "533267185770",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "priv-rt"
            },
            "tags_all": {
              "Name": "priv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2fdeb977db42672"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kienvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267185770:route-table/rtb-000101866b2a45ef6",
            "id": "rtb-000101866b2a45ef6",
            "owner_id": "533267185770",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-011e41fc38b0a12af",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-rt"
            },
            "tags_all": {
              "Name": "pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2fdeb977db42672"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kienigw",
            "aws_vpc.kienvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054a53bc1d7ef384d",
            "route_table_id": "rtb-0c16a025c8925480d",
            "subnet_id": "subnet-0f29d809b98aaf176"
          },
          "dependencies": [
            "aws_route_table.priv-rtb",
            "aws_subnet.priv-sub",
            "aws_vpc.kienvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0ba15aa196f1305",
            "route_table_id": "rtb-000101866b2a45ef6",
            "subnet_id": "subnet-0306567af701abb22"
          },
          "dependencies": [
            "aws_internet_gateway.kienigw",
            "aws_route_table.pub-rtb",
            "aws_subnet.pub-sub",
            "aws_vpc.kienvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kiensg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267185770:security-group/sg-05e05ff8739eb22c3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e05ff8739eb22c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20240526171615177200000002",
            "name_prefix": "terraform-",
            "owner_id": "533267185770",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kiensg"
            },
            "tags_all": {
              "Name": "kiensg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2fdeb977db42672"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kienvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267185770:subnet/subnet-0f29d809b98aaf176",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f29d809b98aaf176",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267185770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-sub"
            },
            "tags_all": {
              "Name": "priv-sub"
            },
            "vpc_id": "vpc-0e2fdeb977db42672"
          },
          "dependencies": [
            "aws_vpc.kienvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267185770:subnet/subnet-0306567af701abb22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0306567af701abb22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267185770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub"
            },
            "tags_all": {
              "Name": "pub-sub"
            },
            "vpc_id": "vpc-0e2fdeb977db42672"
          },
          "dependencies": [
            "aws_vpc.kienvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kienvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267185770:vpc/vpc-0e2fdeb977db42672",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-0b1d7a95cebbd8897",
            "default_route_table_id": "rtb-0b7f67d1e4d675724",
            "default_security_group_id": "sg-0278dc10081f88df9",
            "dhcp_options_id": "dopt-06727dd3aac7cdafa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2fdeb977db42672",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7f67d1e4d675724",
            "owner_id": "533267185770",
            "tags": {
              "Name": "kienvpc"
            },
            "tags_all": {
              "Name": "kienvpc"
            }
          }
        }
      ]
    }
  ]
}